autocomplete for attaching new tag at file info page