@@ -10,14 +10,17 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
     maven {
-        url  "https://dl.bintray.com/larryhsiao/Elizabeth"
+        url "https://dl.bintray.com/larryhsiao/Elizabeth"
     }
 }
 mainClassName = "$moduleName/com.larryhsiao.auxo.Main"
+applicationDefaultJvmArgs = [
+        "--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls"
+]
 
 javafx {
     version = "11"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.base']
 }
 
 jlink {
@@ -28,12 +31,13 @@ jlink {
 }
 
 test {
-    useJUnitPlatform{
+    useJUnitPlatform {
     }
 }
 
 dependencies {
-    implementation  'com.silverhetch:clotho:1.14.0'
+    implementation 'com.silverhetch:clotho:1.14.0'
+    implementation 'org.controlsfx:controlsfx:11.0.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
